discussion/kv_engine/186542/186542_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: Move folly io callbacks elsewhere

To allow for easier unit test

Change-Id: I7ed3de87eac97b5b2830ca399b9e50c3257f9c0d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-02-10 12:41:39.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-10 13:21:50.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22610/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:37:31: error: expected parameter declarator [clang-diagnostic-error]
                              gsl::span<std::string_view> data) {
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:37:31: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:37:59: error: expected ")" [clang-diagnostic-error]
                              gsl::span<std::string_view> data) {
                                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:36:30: note: to match this "("
void AsyncWriteCallback::send(folly::AsyncSocket& sock,
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:40:24: error: invalid range expression of type "double (double) noexcept"; no viable "begin" function available [clang-diagnostic-error]
    for (const auto& d : data) {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:40:26: error: use of undeclared identifier "data"; did you mean "atan"? [clang-diagnostic-error]
    for (const auto& d : data) {
                         ^~~~
                         atan
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:57:13: note: "atan" declared here
__MATHCALL (atan,, (_Mdouble_ __x));
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:49:24: error: invalid range expression of type "double (double) noexcept"; no viable "begin" function available [clang-diagnostic-error]
    for (const auto& d : data) {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:49:26: error: use of undeclared identifier "data"; did you mean "atan"? [clang-diagnostic-error]
    for (const auto& d : data) {
                         ^~~~
                         atan
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:57:13: note: "atan" declared here
__MATHCALL (atan,, (_Mdouble_ __x));
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.h:50:41: error: expected parameter declarator [clang-diagnostic-error]
    void send(folly::AsyncSocket& sock, gsl::span<std::string_view> data);
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.h:50:41: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.h:50:69: error: expected ")" [clang-diagnostic-error]
    void send(folly::AsyncSocket& sock, gsl::span<std::string_view> data);
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.h:50:14: note: to match this "("
    void send(folly::AsyncSocket& sock, gsl::span<std::string_view> data);
             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22610/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/io/folly/write_callback.cc:37:31:
error: expected parameter declarator [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22610/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52009/ : FAILURE

Failure of GoogleTest "AllBackends/DurabilityBucketTest.ReplaceDurabilityImpossible/couchstore_persistent_value_only":

<pre>
[ RUN      ] AllBackends/DurabilityBucketTest.ReplaceDurabilityImpossible/couchstore_persistent_value_only
unknown file: error: C++ exception with description "KVStoreFactory ctor: Specified dbname "ep_engine_ep_unit_tests.db/test.127001" is not a directory" thrown in SetUp().
unknown file: error: SEH exception with code 0xc0000005 thrown in TearDown().
[  FAILED  ] AllBackends/DurabilityBucketTest.ReplaceDurabilityImpossible/couchstore_persistent_value_only, where GetParam() = "backend=couchstore:bucket_type=persistent:item_eviction_policy=value_only" (2 ms)
AllBackends/DurabilityBucketTest.ReplaceDurabilityImpossible/couchstore_persistent_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52009/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43646/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/io/folly/write_callback.h:50:41:
error: use of undeclared identifier "gsl"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43646/ )

CMake error: CMakeLists.txt:170 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43646/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12335/ : FAILURE

Compile error at [2023-02-10T12:43:21.362Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/io/folly/write_callback.h:50:41:
error: use of undeclared identifier "gsl"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12335/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22608/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1385/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12419/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24663/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25088/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25971/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24211/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33083/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
